--- a/cpm/projects/static/less/variables.less
+++ b/cpm/projects/static/less/variables.less
@@ -8,24 +8,54 @@
 
 // Grays
 // -------------------------
-@black:                 #000;
-@grayDarker:            #222;
-@grayDark:              #333;
-@gray:                  #555;
-@grayLight:             #999;
-@grayLighter:           #eee;
-@white:                 #fff;
+@black:                 #282828;
+@grayDarker:            #454545;
+@grayDark:              #616161;
+@gray:                  #7e7e7e;
+@grayLight:             #b1b1b1;
+@grayLighter:           #d8d8d8;
+@grayLightest:          #ececec;
+@white:                 #f7f7f7;
+@whiteTrue:             #fff;
 
 
-// Accent colors
+// Blues
 // -------------------------
-@blue:                  #049cdb;
-@blueDark:              #0064cd;
-@green:                 #46a546;
-@red:                   #9d261d;
-@yellow:                #ffc40d;
+@blueLightest:	        #e5eeff;
+@blueLighter:	        #b6cbf4;
+@blueLight:		#8eabe0;
+@blue:		        #6c8cc8;
+@blueDark:		#4569ad;
+
+
+// Reds
+// -------------------------
+@pinkLighter:		#f9eaea;
+@pinkLight:		#f6d1cd;
+@pink:		        #f4bcb6;
+@red:			#c8756c;
+@redDark:		#ad5145;
+
+
+// Greens
+// -------------------------
+@greenLightest:	        #e1f6f3;
+@greenLighter:	        #b3ddd6;
+@greenLight:		#9ed5cc;
+@green:		        #64aca1;
+@greenDark:		#4b857c;
+
+
+// Yellows
+// -------------------------
+@yellowLight:		#f5f5e3;
+@yellow:	        #c8b36c;
+@yellowDark:		#ad9b45;
+
+
+// Custom Colors
+// -------------------------
 @orange:                #f89406;
-@pink:                  #c3325f;
 @purple:                #7a43b6;
 
 
@@ -43,7 +73,7 @@
 
 // Typography
 // -------------------------
-@sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
+@sansFontFamily:        Lato, Helvetica, Arial, sans-serif;
 @serifFontFamily:       Georgia, "Times New Roman", Times, serif;
 @monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
 
@@ -52,7 +82,7 @@
 @baseLineHeight:        20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
+@headingsFontFamily:    Lato; // empty to use BS default, @baseFontFamily
 @headingsFontWeight:    bold;    // instead of browser default, bold
 @headingsColor:         inherit; // empty to use BS default, @textColor
 
