--- a/cpm/projects/static/less/zak.less
+++ b/cpm/projects/static/less/zak.less
@@ -79,12 +79,13 @@
 
 @baseFontSize:          14px;
 @baseFontFamily:        @sansFontFamily;
-@baseLineHeight:        20px;
+@baseLineHeight:        18px;
 @altFontFamily:         @serifFontFamily;
 
+@headingsFontSize:      28px;
 @headingsFontFamily:    Lato; // empty to use BS default, @baseFontFamily
 @headingsFontWeight:    bold;    // instead of browser default, bold
-@headingsColor:         inherit; // empty to use BS default, @textColor
+@headingsColor:         @black; // empty to use BS default, @textColor
 
 
 // Component sizing
@@ -99,17 +100,17 @@
 @paddingSmall:          2px 10px;  // 26px
 @paddingMini:           0 6px;   // 22px
 
-@baseBorderRadius:      0;
-@borderRadiusLarge:     0;
+@baseBorderRadius:      5px;
+@borderRadiusLarge:     10px;
 @borderRadiusSmall:     3px;
 
 
 // Tables
 // -------------------------
 @tableBackground:                   transparent; // overall background-color
-@tableBackgroundAccent:             #f9f9f9; // for striping
+@tableBackgroundAccent:             darken(@white, 5%); // for striping
 @tableBackgroundHover:              #f5f5f5; // for hover
-@tableBorder:                       #ddd; // table and cell border
+@tableBorder:                       darken(@white, 30%); // table and cell border
 
 // Buttons
 // -------------------------
@@ -331,59 +332,146 @@
 
 
 
-
-// CSS SELECTORS
+// ZAK-STYLE
 // --------------------------------------------------
 
+// Utilities
+// ------------------------
+.pull-center {
+    margin-right: auto;
+    margin-left: auto;
+    display: table;
+}
+.pad-0 {padding: 0;}
+.margin-0 {margin: 0;}
 
-// WPL Widgets
+
+
+// Typography
+// -------------------------
+p { color: @black }
+h1 { font-size: @headingsFontSize; }
+h2 { font-size: (@headingsFontSize - 2); }
+h3 { font-size: (@headingsFontSize - 6); }
+h4 { font-size: (@headingsFontSize - 8); }
+h5 { font-size: (@headingsFontSize - 10); }
+h6 { font-size: (@headingsFontSize - 12); }
+
+
+// Project Header
 // -------------------------
 
-    
+.page-header {
+    text-align: center;
+}
+.sub-menu{
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    font-size: 40px;
+    text-align: center;
+    .active {
+        a[data-target="#tasks"] {
+            background-color: @green;
+        }
+        a[href="#updates"] {
+            background-color: @red;
+        }
+        a[data-target="#messages"] {
+            background-color: @blue;
+        }
+        a[data-target="#proposal"] {
+            background-color: @gray;
+        }
+        i {
+            color: #fff;   
+        }
+    }
+}
+
+
+// WPL Client Dashboard Widgets
+// -------------------------
 .wpl-widget-mixin (@widget-color) {
     .header {
         background-color: @widget-color;
     }
     .well {
-        background-color: lighten(@widget-color, 20%);
+        background-color: lighten(@widget-color, 33%);
+        border: 1px solid @widget-color;
     }
 }
 
+
 .wpl-widget {
+    .slider-item {
+        padding: 5px 20px;
+        min-height: 400px;
+    }    
     .header {
-        color: @white;
+        width: 100%;
+        border-top-right-radius: 4px;
+        border-top-left-radius: 4px;
+        margin-bottom: 15px;
+        h2 {
+            margin: 0;
+            padding-left: 20px;
+            line-height: 85px;
+            color: @white;
+        }
+        i {
+            font-size: 60px;
+            margin: 15px;
+            color: @white;
+        }
     }
     .well {
         padding: 0;
     }
-    .content, .heading {
+    .content {
         padding: 10px;
     }
+     
     
-    &.projects {
+    &.projects, .updates {
         .wpl-widget-mixin(@red);
         
     }
-    &.messages {
+    &.messages, .messages {
         .wpl-widget-mixin(@blue);
         
     }
-    &.updates {
+    &.updates, .tasks {
         .wpl-widget-mixin(@green);
         
     }
-    &.changes {
+    &.change-orders, .change-orders {
         .wpl-widget-mixin(@gray);
         
     }
 }
 
 
-
-
-
-
-
+// Tables
+// -------------------------
+.table.table-striped {
+    a {
+        display: inline-table;
+        height: 100%;
+        width: 100%;
+    }
+    caption {
+        text-align: left;
+        padding-bottom: 20px;
+        color: @black;
+    }
+    thead {
+        background-color: @green;
+        th {color: @white;}
+    }
+    td, th {color: @black;}
+}
 
 
 
