Project WIzard: Looks like no errors. Need some style changes still

--- a/cpm/projects/templates/projects/project_form.html
+++ b/cpm/projects/templates/projects/project_form.html
@@ -51,6 +51,9 @@
                         {% crispy form %}
                     </div>
                     <div class="span4">
+                        <h3>Project Summary</h3>
+                        <ul class="nav nav-list" id="project-summary">
+                        </ul>
                     </div>
                 </div>
 
